# wlcg-token-claims

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/wlcg_token_claims/: __init__.py  __main__.py  config.py  group_validation.py  scan_grouips.py  server.py  version.py
tests/: conftest.py  test_group_validation.py  test_server.py
